# FeatTS

./: PKG-INFO  README.md  main.py  pyproject.toml  setup.py
FeatTS/: FeatTS.py  PFA.py  SLPA.py  __init__.py  utilFeatExtr.py
